// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sorry page should be rendered when the confirmed state is false 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ConfirmEmail />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <Paper
        circle={false}
        className="common-paper"
        rounded={true}
        transitionEnabled={true}
        zDepth={1}
>
        Sorry, we could not confirm your account.
        <br />
        <b>
                Please call 911 for help.
        </b>
</Paper>,
      "className": "container",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          "Sorry, we could not confirm your account.",
          <br />,
          <b>
            Please call 911 for help.
</b>,
        ],
        "circle": false,
        "className": "common-paper",
        "rounded": true,
        "transitionEnabled": true,
        "zDepth": 1,
      },
      "ref": null,
      "rendered": Array [
        "Sorry, we could not confirm your account.",
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": "br",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Please call 911 for help.",
          },
          "ref": null,
          "rendered": "Please call 911 for help.",
          "type": "b",
        },
      ],
      "type": [Function],
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <Paper
          circle={false}
          className="common-paper"
          rounded={true}
          transitionEnabled={true}
          zDepth={1}
>
          Sorry, we could not confirm your account.
          <br />
          <b>
                    Please call 911 for help.
          </b>
</Paper>,
        "className": "container",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            "Sorry, we could not confirm your account.",
            <br />,
            <b>
              Please call 911 for help.
</b>,
          ],
          "circle": false,
          "className": "common-paper",
          "rounded": true,
          "transitionEnabled": true,
          "zDepth": 1,
        },
        "ref": null,
        "rendered": Array [
          "Sorry, we could not confirm your account.",
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": "br",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Please call 911 for help.",
            },
            "ref": null,
            "rendered": "Please call 911 for help.",
            "type": "b",
          },
        ],
        "type": [Function],
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Thank you page should be rendered when the confirmed state is true 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ConfirmEmail />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <Paper
        circle={false}
        className="common-paper"
        rounded={true}
        transitionEnabled={true}
        zDepth={1}
>
        Thank you for confirming your email. You may now proceed to the
        <br />
        <b>
                <Link
                        replace={false}
                        to="/login"
                >
                        Login
                </Link>
        </b>
</Paper>,
      "className": "container",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          "Thank you for confirming your email. You may now proceed to the",
          <br />,
          <b>
            <Link
                        replace={false}
                        to="/login"
            >
                        Login
            </Link>
</b>,
        ],
        "circle": false,
        "className": "common-paper",
        "rounded": true,
        "transitionEnabled": true,
        "zDepth": 1,
      },
      "ref": null,
      "rendered": Array [
        "Thank you for confirming your email. You may now proceed to the",
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": "br",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <Link
              replace={false}
              to="/login"
>
              Login
</Link>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "Login",
              "replace": false,
              "to": "/login",
            },
            "ref": null,
            "rendered": "Login",
            "type": [Function],
          },
          "type": "b",
        },
      ],
      "type": [Function],
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <Paper
          circle={false}
          className="common-paper"
          rounded={true}
          transitionEnabled={true}
          zDepth={1}
>
          Thank you for confirming your email. You may now proceed to the
          <br />
          <b>
                    <Link
                              replace={false}
                              to="/login"
                    >
                              Login
                    </Link>
          </b>
</Paper>,
        "className": "container",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            "Thank you for confirming your email. You may now proceed to the",
            <br />,
            <b>
              <Link
                            replace={false}
                            to="/login"
              >
                            Login
              </Link>
</b>,
          ],
          "circle": false,
          "className": "common-paper",
          "rounded": true,
          "transitionEnabled": true,
          "zDepth": 1,
        },
        "ref": null,
        "rendered": Array [
          "Thank you for confirming your email. You may now proceed to the",
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": "br",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <Link
                replace={false}
                to="/login"
>
                Login
</Link>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "Login",
                "replace": false,
                "to": "/login",
              },
              "ref": null,
              "rendered": "Login",
              "type": [Function],
            },
            "type": "b",
          },
        ],
        "type": [Function],
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
